# MParser

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/mparser/: base.py  main.py  parsers.py  tables.py
