[project]
name = "MParser"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Basov",email = "sasha4ka99991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "mparser", from = "src"}]

[tool.poetry.scripts]
mparser = "mparser.main:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=2.0.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
