[project]
name = "MParser"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Basov",email = "sasha4ka99991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "mparser", from = "src"}]

[tool.poetry.scripts]
mparser = "mparser.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
